# robot

./: .gitignore  CMakeLists.txt  README.md  programmer_config.cmake  toArduino.bat  toArduino.sh
cores/arduino/: Arduino.h  wiring_private.h
include/: configs.h
include/configs/: configs.h
include/hardware/: beacon.h  beaconwatcher.h  clawcontroller.h  clawmechanism.h  dcmotor.h  driver.h  drivetrain.h  encoder.h  encodermotor.h  frequencysensor.h  ir.h  limitmechanism.h  limitmotorcontroller.h  linesensor.h  motorcontroller.h  qrd.h  servomotor.h  switch.h
include/sequences/: claw.h  drivetrain.h  maneuver.h  platform.h  platform.h.bak  tape.h  zipline.h
include/stages/: gate.h  pickup.h  zipline.h
include/templates/: module.h  sequence.h  sequences.h  stage.h  stages.h
include/utils/: encoderinterrupts.h  filter.h  pid.h
libraries/TINAH_libraries/: .directory  ServoTINAH.cpp  ServoTINAH.h  phys253.cpp  phys253.h
libraries/TINAH_libraries/examples/TINAH_demo/: TINAH_demo.ino
src/: main.cpp
src/hardware/: beacon.cpp  beacon.cpp.bak  beaconwatcher.cpp  clawcontroller.cpp  clawmechanism.cpp  dcmotor.cpp  driver.cpp  driver.cpp.bak  drivetrain.cpp  encoder.cpp  encodermotor.cpp  frequencysensor.cpp  ir.cpp  limitmechanism.cpp  limitmotorcontroller.cpp  linesensor.cpp  motorcontroller.cpp  qrd.cpp  servomotor.cpp  switch.cpp
src/sequences/: claw.cpp  drivetrain.cpp  maneuver.cpp  platform.cpp  platform.cpp.bak  tape.cpp  tape.cpp.bak  zipline.cpp
src/stages/: gate.cpp  pickup.cpp  pickup.h  zipline.cpp
src/utils/: encoderinterrupts.c  filter.c  filter.cpp  pid.cpp
variants/TINAH/: pins_arduino.h
